@@ -171,12 +171,14 @@ stuff in your Makefile.PL's WriteMakefile arguments.
 
 =cut
 
+our @ADDITIONAL_FILES_TO_CLEAN = ();
+
 sub postamble_clean
 {
 	shift; # package name
 "
 realclean ::
-	-\$(RM_RF) build perl-\$(DISTNAME).spec ".join(" ", @_)."
+	-\$(RM_RF) build perl-\$(DISTNAME).spec @ADDITIONAL_FILES_TO_CLEAN @_
 ";
 }
 
@@ -506,6 +508,37 @@ dist-srpms :: Makefile dist perl-\$(DISTNAME).spec \$(RPMS_DIR)/
 	cp \$(DISTNAME)-\$(VERSION).tar.gz \$(RPMS_DIR)/SOURCES/
 	rpmbuild -bs --nodeps --define \"_topdir \$(RPMS_DIR)\" perl-\$(DISTNAME).spec
 ";
+}
+
+=item string = Glib::MakeHelper->postamble_precompiled_headers (@headers)
+
+Create and return the text of Makefile rules for a 'precompiled-headers' target
+that precompiles I<@headers>.  If you call this before you call
+C<postamble_clean>, all temporary files will be removed by the 'realclean'
+target.
+
+=cut
+
+sub postamble_precompiled_headers
+{
+	shift; # package name
+	my @headers = @_;
+	my @precompiled_headers = ();
+	my $rules = "";
+	foreach my $header (@headers) {
+		my $output = $header . '.gch';
+		push @precompiled_headers, $output;
+		push @ADDITIONAL_FILES_TO_CLEAN, $output;
+		$rules .= <<PCH;
+
+$output: $header
+	\$(CCCMD) \$(CCCDLFLAGS) "-I\$(PERL_INC)" \$(PASTHRU_DEFINE) \$(DEFINE) $header
+PCH
+	}
+	$rules .= <<PCH;
+
+precompiled-headers: @precompiled_headers
+PCH
 }
 
 package MY;
