@@ -1,3 +1,9 @@
+2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* MakeHelper.pm: Add
+	Glib::MakeHelper->postamble_precompiled_headers to generate a make
+	target for precompiling headers.
+
 2008-12-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* GType.xs
